# ichikas-auto-assistant

./: .gitignore  README.md  iaa-build.ps1  justfile  launch_desktop.py  pyproject.toml
doc/: CHANGELOG.md
iaa/: .gitignore  __init__.py  consts.py  context.py  main.py  utils.py
iaa/application/desktop/: advance_select.py  index.py  tab_about.py  tab_conf.py  tab_main.py  toast.py  tooltip.py
iaa/application/service/: assets_service.py  config_service.py  iaa_service.py  scheduler.py
iaa/config/: base.py  manager.py  schemas.py
iaa/tasks/: _fragments.py  cm.py  common.py  live.py  registry.py  start_game.py
iaa/tasks/live/: __init__.py  _scene.py  _select_song.py  challenge_live.py  live.py  solo_live.py  ten_songs.py
iaa/tasks/story/: _common.py  activity_story.py
resources/jp/cm/: screenshot_ad_failed.png.json  screenshot_ap_recovered.png.json  screenshot_award.png.json  screenshot_cm_confirm.png.json  screenshot_cm_select.png.json
resources/jp/common_dialog/: screenshot_award_claimed.png.json  screenshot_data_download.png.json
resources/jp/live/: screenshot_7day_award_1.png.json  screenshot_7day_award_2.png.json  screenshot_auto_completed.png.json  screenshot_auto_settings.png.json  screenshot_challenge_select_1.png.json  screenshot_challenge_select_2.png.json  screenshot_challenge_select_3.png.json  screenshot_challenge_select_4.png.json  screenshot_challenge_select_5.png.json  screenshot_challenge_select_6.png.json  screenshot_live_clear.png.json  screenshot_live_completed.png.json  (+6 more)
tools/: R.jinja2  make_diff.py  make_resources.py  resize_res.py
(+18 files in other folders)
